Refactored globe code, downloaded .json & .tsv countries files

--- a/index.html
+++ b/index.html
@@ -33,17 +33,10 @@
     </header>
 
     <main>
-        <div class="earth-wrapper">
-
-            
-                <div class="stars">
-                    <h2 id="current"></h2>
-                    <div class="clouds"><canvas id="globe"></canvas>
-                </div>
-
-
-
-        </div>
+        <h2 id="countryName"></h2>
+        <div> 
+            <canvas id="globe"></canvas>
+        </div> 
     </main>
 </body>
 
