--- a/index.html
+++ b/index.html
@@ -9,25 +9,18 @@
 	<link href="styles/main.css" rel="stylesheet" type="text/css">
 	<link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
     <link href="styles/all.min.css" rel="stylesheet" type="text/css"/>
+
     <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script>
-
-
     <script src="scripts/jquery-3.0.0.min.js" type="text/javascript" ></script>
 
-    <!-- <script src="scripts/d3/d3.js" type="text/javascript"></script>
-    <script src="scripts/d3/d3.min.js" type="text/javascript"></script> -->
+    
 
+    <script src="/scripts/d3/d3.min.js"></script>
+    <script src='/scripts/d3/d3-geo.v1.min.js'></script>
+    <script src="/scripts/d3/versor.js"></script>
+    <script src="/scripts/d3/topojson.v2.min.js"></script>
 
-
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js'></script>
-    <script src='https://d3js.org/d3-geo.v1.min.js'></script>
-    <script src='https://d3js.org/topojson.v2.min.js'></script>
-    <script src='https://bl.ocks.org/mbostock/raw/7ea1dde508cec6d2d95306f92642bc42/6aac691494f752142a67cc43c51a0fd09896dbd4/versor.js'></script>
-	
-  
-
-
-	<script src="scripts/earth.js" type="text/javascript"></script>
+	<script src="scripts/earth.js" type="module"></script>
 </head>
 
 <body>
