--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
     <link href="styles/all.min.css" rel="stylesheet" type="text/css"/>
 
-    <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script> -->
     <script src="scripts/jquery-3.0.0.min.js" type="text/javascript" ></script>
 
     
