choosetype buttons in header

--- a/index.html
+++ b/index.html
@@ -37,15 +37,16 @@
                     <button id="ruBtn">Ru</button>
                     <button id="enBtn">En</button>
                 </span>
-                <span   class="header-theme">
-                    <button id="lightBtn"></button>
-                    <button id="darkBtn"></button>
-                    <button id="dynamicBtn"></button>
+                <span   class="header-choosetype">
+                    <button id="countryBtn">Country</button>
+                    <button id="regionBtn">Region</button>
                 </span>
             </wrap>
-            <span class="header-info">
-                <button id="infoBtn"></button>
-            </span>
+            <span class="header-theme">
+                <button id="lightBtn"></button>
+                <button id="darkBtn"></button>
+                <button id="dynamicBtn"></button>
+            </span> 
         </div>
     </header>
 
