--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<link href="styles/index.css" rel="stylesheet" type="text/css">
     <link href="styles/header.css" rel="stylesheet" type="text/css">
+    <link href="styles/sidebar.css" rel="stylesheet" type="text/css">
     <link href="styles/earth.css" rel="stylesheet" type="text/css">
 	<link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
     <link href="styles/all.min.css" rel="stylesheet" type="text/css"/>
@@ -54,7 +55,32 @@
 
     <content>
         <sidebar>
-            <div></div>
+            <wrap>
+                <div>
+                    <h1>welcum</h1>
+                    <input type="text"/>
+                </div> 
+                <div>
+                    <p>Africa</p>
+                    <ul>
+                        <li>Africa</li>
+                        <li>Africa</li>
+                        <li>Africa</li>
+                        <li>Africa</li>
+                        <li>Africa</li>
+                    </ul>
+                </div>
+                <div>
+                    <p>America</p>
+                    <ul>
+                        <li>America</li>
+                        <li>America</li>
+                        <li>America</li>
+                        <li>America</li>
+                        <li>America</li>
+                    </ul>
+                </div>
+            </wrap>
         </sidebar>
         <main>
             <h2 id="countryName"></h2>
