--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <button id="regionBtn">Region</button>
                 </span>
                 <span class="header-theme">
-                    <button id="lightBtn">
-                        <img src="src/sun.png" alt="">
+                    <button id="lightBtn" class="">
+                        <img src="src/sun-cheese.png" alt="">
                     </button>
                     <button id="dynamicBtn" class="active-btn">
                         <img src="src/globe.png" alt="">
