dark & light theme complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-	<header>
+	<header class="non-select">
         <logo>
             <img    class="header-logo" src="src/wave.png" alt="">
             <h1>RIVERWOOD</h1>
@@ -45,10 +45,10 @@
                     <button id="regionBtn">Region</button>
                 </span>
                 <span class="header-theme">
-                    <button id="lightBtn" class="">
+                    <button id="lightBtn" class="active-btn">
                         <img src="src/sun-cheese.png" alt="">
                     </button>
-                    <button id="dynamicBtn" class="active-btn">
+                    <button id="dynamicBtn" class="">
                         <img src="src/globe.png" alt="">
                     </button>
                     <button id="darkBtn">
