themes scripts to a new files, better border for a globe

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="/scripts/d3/topojson.v2.min.js"></script>
 
 	<script src="scripts/earth.js" type="module"></script>
+    <script src="scripts/header.js" type="module"></script>
 </head>
 
 <body>
