--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
                     <button id="regionBtn">Region</button>
                 </span>
                 <span class="header-theme">
-                    <button id="lightBtn" class="active-btn">
                         <img src="src/sun-cheese.png" alt="">
                     </button>
                     <button id="dynamicBtn" class="">
                         <img src="src/globe.png" alt="">
                     </button>
-                    <button id="darkBtn">
+                    <button id="darkBtn" class="active-btn">
                         <img src="src/moon.png" alt="">
                     </button>
                 </span> 
@@ -63,29 +62,8 @@
     <content>
         <sidebar>
             <wrap>
-                <div> 
-                    <input placeholder="Find river!" type="text"/>
-                </div> 
-                <div>
-                    <p>Africa</p>
-                    <ul>
-                        <li>Africa</li>
-                        <li>Africa</li>
-                        <li>Africa</li>
-                        <li>Africa</li>
-                        <li>Africa</li>
-                    </ul>
-                </div>
-                <div>
-                    <p>America</p>
-                    <ul>
-                        <li>America</li>
-                        <li>America</li>
-                        <li>America</li>
-                        <li>America</li>
-                        <li>America</li>
-                    </ul>
-                </div>
+                <input placeholder="Find river!" type="text"/>
+                <ul></ul>
             </wrap>
         </sidebar>
         <main>
