set fonts to the blocks

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <button id="regionBtn">Region</button>
                 </span>
                 <span class="header-theme">
+                    <button id="lightBtn" class="">
                         <img src="src/sun-cheese.png" alt="">
                     </button>
                     <button id="dynamicBtn" class="">
