--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
     <script src="/scripts/d3/versor.js"></script>
     <script src="/scripts/d3/topojson.v2.min.js"></script>
 
-	<script src="scripts/earth.js" type="module"></script>
-    <script src="scripts/header.js" type="module"></script>
+
+    <script src="/scripts/riversRU.js" type="text/javascript"></script>
+    <script src="/scripts/riversEN.js" type="text/javascript"></script>
+
+    <script src="scripts/RegionEnum.js" type="text/javascript"></script>
+    <script src="scripts/GLOBALS.js" type="text/javascript"></script>
+
+	<script src="scripts/earth.js" type="text/javascript"></script>
+    <script src="scripts/header.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -68,7 +75,7 @@
             </wrap>
         </sidebar>
         <main>
-            <h2 id="countryName"></h2>
+            <h2 id="areaText"></h2>
             <div> 
                 <canvas id="globe"></canvas>
             </div> 
