--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 
     <script src="/scripts/riversRU.js" type="text/javascript"></script>
     <script src="/scripts/riversEN.js" type="text/javascript"></script>
-
-    <script src="scripts/RegionEnum.js" type="text/javascript"></script>
-    <script src="scripts/GLOBALS.js" type="text/javascript"></script>
+ 
 
 	<script src="scripts/earth.js" type="text/javascript"></script>
     <script src="scripts/header.js" type="text/javascript"></script>
+
+
+    <script src="scripts/onReady.js" type="text/javascript"></script>
+
 </head>
 
 <body>
