--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
  
 
 	<script src="scripts/earth.js" type="text/javascript"></script>
-    <script src="scripts/header.js" type="text/javascript"></script>
-
-
-    <script src="scripts/onReady.js" type="text/javascript"></script>
-
 </head>
 
 <body>
@@ -47,11 +42,11 @@
         <settings>
             <wrap>
                 <span   class="header-language">
-                    <button id="ruBtn" class="active-btn">Ru</button>
+                    <button id="ruBtn">Ru</button>
                     <button id="enBtn">En</button>
                 </span>
                 <span   class="header-choosetype">
-                    <button id="countryBtn" class="active-btn">Country</button>
+                    <button id="countryBtn">Country</button>
                     <button id="regionBtn">Region</button>
                 </span>
                 <span class="header-theme">
@@ -73,7 +68,7 @@
         <sidebar>
             <wrap>
                 <input placeholder="Find river!" type="text"/>
-                <ul></ul>
+                <ul id="sidebarList"></ul>
             </wrap>
         </sidebar>
         <main>
@@ -83,6 +78,9 @@
             </div> 
         </main>
     </content>
+
+    <script src="scripts/header.js" type="text/javascript"></script>
+    <script src="scripts/onReady.js" type="text/javascript"></script>
 </body>
 
 </html>
