setted up jsons: splitted parts of countries for right regions

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <wrap>
                 <input placeholder="Find river!" type="text"/>
                 <ul id="sidebarList"></ul>
+                <ul id="riverList"></ul>
             </wrap>
         </sidebar>
         <main>
