--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="styles/all.min.css" rel="stylesheet" type="text/css"/>
 
     <!-- <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script> -->
-    <script src="scripts/jquery-3.0.0.min.js" type="text/javascript" ></script>
+    <script src="scripts/jquery-3.0.0.min.js" type="text/javascript"></script>
 
     
 
@@ -65,13 +65,21 @@
     </header>
 
     <content>
-        <sidebar>
+        <aside>
             <wrap>
-                <input placeholder="Find river!" type="text"/>
+                <div class="sidebar-input-wrapper">
+                    <input placeholder="Find river!" type="text" id="searchInput"/>
+                    <span class="input-btn non-select">↑</span>
+                    <span class="input-btn non-select">↓</span>
+                    <span class="input-btn non-select"></span>
+                </div>
+                
+
+
                 <ul id="sidebarList"></ul>
                 <ul id="riverList"></ul>
             </wrap>
-        </sidebar>
+        </aside>
         <main>
             <h2 id="areaText"></h2>
             <div> 
@@ -81,6 +89,7 @@
     </content>
 
     <script src="scripts/header.js" type="text/javascript"></script>
+    <script src="scripts/search.js" type="text/javascript"></script>
     <script src="scripts/onReady.js" type="text/javascript"></script>
 </body>
 
