counter & styles for search

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <wrap>
                 <div class="sidebar-input-wrapper">
                     <input placeholder="Find river!" type="text" id="searchInput"/>
+                    <span class="input-btn input-counter non-select">0/0</span>
                     <span class="input-btn non-select">↑</span>
                     <span class="input-btn non-select">↓</span>
                     <span class="input-btn non-select"></span>
