--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="styles/earth.css" rel="stylesheet" type="text/css">
 	<link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
     <link href="styles/all.min.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/media.css" rel="stylesheet" type="text/css">
+
 
     <!-- <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script> -->
     <script src="scripts/jquery-3.0.0.min.js" type="text/javascript"></script>
@@ -38,48 +40,49 @@
         <logo>
             <img    class="header-logo" src="src/wave.png" alt="">
             <h1>RIVERWOOD</h1>
+            <button>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </logo>
         <settings>
-            <wrap>
-                <span   class="header-language">
-                    <button id="ruBtn">Ru</button>
-                    <button id="enBtn">En</button>
-                </span>
-                <span   class="header-choosetype">
-                    <button id="countryBtn">Country</button>
-                    <button id="regionBtn">Region</button>
-                </span>
-                <span class="header-theme">
-                    <button id="lightBtn" class="">
-                        <img src="src/sun-cheese.png" alt="">
-                    </button>
-                    <button id="dynamicBtn" class="">
-                        <img src="src/globe.png" alt="">
-                    </button>
-                    <button id="darkBtn" class="active-btn">
-                        <img src="src/moon.png" alt="">
-                    </button>
-                </span> 
-            </wrap>
+            <span class="header-language">
+                <button id="ruBtn">Ru</button>
+                <button id="enBtn">En</button>
+            </span>
+            <span   class="header-choosetype">
+                <button id="countryBtn">Country</button>
+                <button id="regionBtn">Region</button>
+            </span>
+            <span class="header-theme">
+                <button id="lightBtn" class="">
+                    <img src="src/sun-cheese.png" alt="">
+                </button>
+                <button id="dynamicBtn" class="">
+                    <img src="src/globe.png" alt="">
+                </button>
+                <button id="darkBtn">
+                    <img src="src/moon.png" alt="">
+                </button>
+            </span> 
         </settings>
     </header>
 
     <content>
         <aside>
-            <wrap>
-                <div class="sidebar-input-wrapper">
-                    <input placeholder="Find river!" type="text" id="searchInput"/>
-                    <span class="input-btn input-counter non-select">0/0</span>
-                    <span class="input-btn non-select">↑</span>
-                    <span class="input-btn non-select">↓</span>
-                    <span class="input-btn non-select"></span>
-                </div>
-                
+            <div class="sidebar-input-wrapper">
+                <input placeholder="Find river!" type="text" id="searchInput"/>
+                <span class="input-btn input-counter non-select">0/0</span>
+                <span class="input-btn non-select">↑</span>
+                <span class="input-btn non-select">↓</span>
+                <span class="input-btn non-select">×</span>
+            </div>
+            
 
 
-                <ul id="sidebarList"></ul>
-                <ul id="riverList"></ul>
-            </wrap>
+            <ul id="sidebarList"></ul>
+            <ul id="riverList"></ul>
         </aside>
         <main>
             <h2 id="areaText"></h2>
