--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <span class="header-language">
                 <button id="ruBtn">Ru</button>
                 <button id="enBtn">En</button>
+                <button id="frBtn">Fr</button>
+                <button id="spBtn">Sp</button>
             </span>
             <span   class="header-choosetype">
                 <button id="countryBtn">Country</button>
@@ -66,6 +68,10 @@
                     <img src="src/moon.png" alt="">
                 </button>
             </span> 
+
+            <span class="header-mobile-scroll">
+                <button id="mobileScroll">Find on Earth ↓</button>
+            </span>
         </settings>
     </header>
 
@@ -90,6 +96,9 @@
                 <canvas id="globe"></canvas>
             </div> 
         </main>
+
+
+
     </content>
 
     <script src="scripts/header.js" type="text/javascript"></script>
