--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script> -->
     <script src="scripts/jquery-3.0.0.min.js" type="text/javascript"></script>
+    <script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
 
     <script src="/scripts/d3/d3.min.js"></script>
     <script src='/scripts/d3/d3-geo.v1.min.js'></script>
@@ -37,14 +38,11 @@
             <h1>RIVERWOOD</h1>
             
         </section>
-
         <button id="settingsBtn">
             <span></span>
             <span></span>
             <span></span>
         </button>
-
-
         <section class="header-settings">
             <div class="header-controls header-language">
                 <button id="ruBtn">RU</button>
@@ -69,7 +67,7 @@
             </div> 
 
             <div class="header-mobile-scroll">
-                <button id="mobileScroll">To the Earth</button>
+                <button id="mobileScroll"><span>To the Earth</span></button>
             </div>
         </section>
     </header>
