--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div> 
 
             <div class="header-mobile-scroll">
-                <button id="mobileScroll"><span>To the Earth</span></button>
+                <button id="mobileScroll"><span></span></button>
             </div>
         </section>
     </header>
@@ -93,6 +93,8 @@
     <script src="scripts/earth.js" type="text/javascript"></script>
     <script src="scripts/header.js" type="text/javascript"></script>
     <script src="scripts/search.js" type="text/javascript"></script>
+
+    <script src="scripts/Globals.js" type="text/javascript"></script>
     <script src="scripts/onReady.js" type="text/javascript"></script>
 </body>
 
