local storage for header settings

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <button id="spBtn">SP</button>
             </div>
             <div class="header-controls header-choosetype">
-                <button id="countryBtn">Country</button>
-                <button id="regionBtn">Region</button>
+                <button id="countryBtn"></button>
+                <button id="regionBtn"></button>
             </div>
             <div class="header-controls header-theme">
                 <button id="lightBtn" class="">
@@ -75,7 +75,7 @@
     <main>
         <aside>
             <div class="sidebar-input-wrapper">
-                <input placeholder="Find river!" type="text" id="searchInput"/>
+                <input type="text" id="searchInput"/>
                 <span class="input-btn input-counter non-select">0/0</span>
                 <span class="input-btn non-select">↑</span>
                 <span class="input-btn non-select">↓</span>
