--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 	<header class="non-select">
         <section class="header-logo">
-            <img    class="header-logo" src="src/wave.png" alt="">
+            <img class="header-logo" src="src/turtle.png" alt="">
             <h1>RIVERWOOD</h1>
             
         </section>
@@ -55,15 +55,15 @@
                 <button id="countryBtn"></button>
                 <button id="regionBtn"></button>
             </div>
-            <div class="header-controls header-theme">
+            <div class="header-theme">
                 <button id="lightBtn" class="">
-                    <img src="src/sun-cheese.png" alt="">
+                    <span></span>
                 </button>
                 <button id="dynamicBtn" class="">
-                    <img src="src/globe.png" alt="">
+                    <span></span>
                 </button>
                 <button id="darkBtn">
-                    <img src="src/moon.png" alt="">
+                    <span></span>
                 </button>
             </div> 
 
@@ -91,6 +91,9 @@
             <canvas id="globe"></canvas>
         </article> 
     </main>
+
+    <div id="themeAnimation"></div>
+    <div id="themeIcon"></div>
     
     <script src="scripts/header.js" type="text/javascript"></script>
     <script src="scripts/search.js" type="text/javascript"></script>
