dynamic background in dynamic theme

--- a/Area/area.html
+++ b/Area/area.html
@@ -23,8 +23,8 @@
 <body>
 	<header class="non-select">
         <section class="header-logo">
-            <a href="/index.html"></a>
-            <img    class="header-logo" src="src/wave.png" alt="">
+            <a href="../index.html"></a>
+            <img    class="header-logo" src="../src/turtle.png" alt="">
             <h1>RIVERWOOD</h1>
         </section>
         <button id="settingsBtn">
