stars in dynamic theme

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <article>
             <a id="areaText" href="/Area/area.html"></a>
             <canvas id="globe"></canvas>
+            <div id="stars"></div>
         </article> 
     </main>
 
