fixed search and excessive use of innerHTML = ...

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" translate="no">
 
 <head>
 	<meta charset="UTF-8" />
@@ -14,6 +14,7 @@
     <link href="styles/header.css" rel="stylesheet" type="text/css">
     <link href="styles/sidebar.css" rel="stylesheet" type="text/css">
     <link href="styles/earth.css" rel="stylesheet" type="text/css">
+    <link href="styles/about.css" rel="stylesheet" type="text/css">
     <link href="styles/media.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -71,11 +72,27 @@
             <ul id="areaList"></ul>
             <ul id="riverList"></ul>
         </aside>
-        <article id="globeArticle">
+        <article id="globeWrap">
             <a id="areaText" href="/Area/area.html"></a>
             <canvas id="globe"></canvas>
             <div id="stars"></div>
         </article> 
+
+        <article id="aboutWrap">
+            <p class="about-p about-project-name">
+                The riverwood project
+            </p>
+            <p class="about-p about-project-description"></p>
+            <span>
+                <a id="vkLink"></a>
+                <a id="tgLink"></a>
+                <a id="mailLink"></a>
+                <a id="gitLink"></a>
+            </span>
+            <button>
+                
+            </button>
+        </article>
     </main>
 
     <div id="themeAnimation"></div>
