letters sending on my email

--- a/Area/area.html
+++ b/Area/area.html
@@ -24,7 +24,7 @@
 	<header class="non-select">
         <section class="header-logo">
             <a href="../index.html"></a>
-            <img    class="header-logo" src="../src/turtle.png" alt="">
+            <img    class="header-logo" src="../src/t.svg" alt="">
             <h1>RIVERWOOD</h1>
         </section>
         <button id="settingsBtn">
