--- a/Area/area.html
+++ b/Area/area.html
@@ -12,19 +12,14 @@
     <link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
 	<link href="styles/index.css" rel="stylesheet" type="text/css">
     <link href="styles/header.css" rel="stylesheet" type="text/css">
+    <link href="styles/introduction.css" rel="stylesheet" type="text/css">
     <link href="styles/media.css" rel="stylesheet" type="text/css">
-
-
-    <!-- <script src="https://kit.fontawesome.com/1a5dbb7df6.js" crossorigin="anonymous"></script> -->
-    <script src="scripts/jquery-3.0.0.min.js" type="text/javascript"></script>
-    <script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
 </head>
 
 <body>
 	<header class="non-select">
         <section class="header-logo">
-            <a href="../index.html"></a>
-            <img    class="header-logo" src="../src/t.svg" alt="">
+            <img class="header-logo" src="src/t.svg" alt="">
             <h1>RIVERWOOD</h1>
         </section>
         <button id="settingsBtn">
@@ -38,28 +33,80 @@
                 <button id="enBtn">EN</button>
                 <button id="frBtn">FR</button>
                 <button id="spBtn">SP</button>
-            </div>
-            
-            <div class="header-controls header-theme">
+            </div> 
+            <div class="header-theme">
                 <button id="lightBtn" class="">
-                    <img src="src/sun-cheese.png" alt="">
-                </button>
-                <button id="dynamicBtn" class="">
-                    <img src="src/globe.png" alt="">
-                </button>
+                    <span></span>
+                </button> 
                 <button id="darkBtn">
-                    <img src="src/moon.png" alt="">
+                    <span></span>
                 </button>
             </div> 
+
+            <div class="header-mobile-scroll">
+                <button id="mobileScroll"><span></span></button>
+            </div>
         </section>
     </header>
 
     <main>
-        <h2></h2>
+        <article id="introduction">
+            <h2></h2>
+
+            <section>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa perferendis reprehenderit laborum dolore in veniam magni, quaerat doloribus velit? Neque dolor nisi est ea iusto esse ipsa numquam, eligendi tempore.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur debitis fugit maiores fugiat rerum? A nesciunt id, quod, mollitia quidem nihil in eius praesentium commodi qui vitae doloribus recusandae ea Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, inventore dolores temporibus ducimus commodi neque ab doloremque. Aperiam odit, quisquam sit, corrupti est recusandae quae sequi iure non, voluptatibus tempora.</p>
+            </section>
+        </article>
+        <article id="idk2">
+            <section>
+                <p>Haven't you see that page in development, huh?...</p>
+            </section>
+        </article>
+        <article id="idk3">
+            <section>
+                <p>Get out of here, there's nothing below</p>
+            </section>
+        </article>
+        <article id="idk4">
+            <section>
+                <p>Fine! You can do whatever you want! Keep scrolling, you want it so much!</p>    
+            </section>
+        </article>
+        <article id="list">
+            <ul>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+                <li>Hmmm?</li>
+            </ul>
+        </article>
+
+
+
+        <div id="scrollNav">
+            <span class="active"></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </main>
+
+
+    <div id="themeAnimation"></div> 
+
+
+
+    <script src="scripts/JSF.js" type="text/javascript"></script> 
     <script src="scripts/header.js" type="text/javascript"></script> 
 
-    <script src="scripts/Globals.js" type="text/javascript"></script>
     <script src="scripts/onReady.js" type="text/javascript"></script>
 </body>
 
