significant rivers in area page

--- a/Area/area.html
+++ b/Area/area.html
@@ -13,6 +13,7 @@
 	<link href="styles/index.css" rel="stylesheet" type="text/css">
     <link href="styles/header.css" rel="stylesheet" type="text/css">
     <link href="styles/introduction.css" rel="stylesheet" type="text/css">
+    <link href="styles/significant.css" rel="stylesheet" type="text/css">
     <link href="styles/media.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -98,19 +99,40 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur debitis fugit maiores fugiat rerum? A nesciunt id, quod, mollitia quidem nihil in eius praesentium commodi qui vitae doloribus recusandae ea Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, inventore dolores temporibus ducimus commodi neque ab doloremque. Aperiam odit, quisquam sit, corrupti est recusandae quae sequi iure non, voluptatibus tempora.</p>
             </section>
         </article>
-        <article id="idk2">
+        <article id="significant">
+            <h2>The most significant rivers</h2>
             <section>
-                <p>Haven't you see that page in development, huh?...</p>
+                <div class="significant-background">
+                    <div class="significant-content">                    
+                        <h3>River</h3>
+                        <p></p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="significant-background">
+                    <div class="significant-content">                    
+                        <h3>River</h3>
+                        <p></p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="significant-background">
+                    <div class="significant-content">                    
+                        <h3>River</h3>
+                        <p></p>
+                        <button>Read more</button>
+                    </div>
+                </div>
             </section>
         </article>
         <article id="idk3">
             <section>
-                <p>Get out of here, there's nothing below</p>
+                <p>...</p>
             </section>
         </article>
         <article id="idk4">
             <section>
-                <p>Fine! You can do whatever you want! Keep scrolling, you want it so much!</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
             </section>
         </article>
         <article id="list">
