working list, fixed earth header link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </section>
         </aside>
         <article id="globeWrap">
-            <a id="areaText" href="/Area/area.html"></a>
+            <a id="areaText"></a>
             <canvas id="globe"></canvas>
             <div id="stars"></div>
         </article> 
