--- a/Area/area.html
+++ b/Area/area.html
@@ -14,6 +14,7 @@
     <link href="styles/header.css" rel="stylesheet" type="text/css">
     <link href="styles/introduction.css" rel="stylesheet" type="text/css">
     <link href="styles/significant.css" rel="stylesheet" type="text/css">
+    <link href="styles/list.css" rel="stylesheet" type="text/css">
     <link href="styles/media.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -72,6 +73,9 @@
                 <button id="lightBtn" class="">
                     <span></span>
                 </button>
+                <button id="dynamicBtn" class="">
+                    <span></span>
+                </button>
                 <button id="darkBtn">
                     <span></span>
                 </button>
@@ -95,11 +99,17 @@
 
     <main>
         <article id="introduction">
-            <h2></h2>
-
+            <h2></h2> 
             <section>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa perferendis reprehenderit laborum dolore in veniam magni, quaerat doloribus velit? Neque dolor nisi est ea iusto esse ipsa numquam, eligendi tempore.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur debitis fugit maiores fugiat rerum? A nesciunt id, quod, mollitia quidem nihil in eius praesentium commodi qui vitae doloribus recusandae ea Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, inventore dolores temporibus ducimus commodi neque ab doloremque. Aperiam odit, quisquam sit, corrupti est recusandae quae sequi iure non, voluptatibus tempora.</p>
+                <p>
+                    If you see this description, it means that the page is under development and will soon be fixed to make the user experience of using the resource even better.
+                    <br><br>
+                    Please, if you have any ideas/suggestions on how to fix this page, let us know on the main page in the "Contacts" section, in an email or in any media available to you.
+                    <br><br>
+                    Native speakers of English, Spanish and French are also welcome for more correct translation of pages.
+                    <br><br>
+                    Thanks.
+                </p>
             </section>
         </article>
         <article id="significant">
@@ -130,27 +140,34 @@
         </article>
         <article id="idk3">
             <section>
-                <p>...</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
             </section>
         </article>
         <article id="idk4">
             <section>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sed officia a? Ipsam, quaerat illum temporibus, odio placeat accusantium repudiandae voluptatem enim nam suscipit omnis ad dignissimos hic dolor? Quibusdam.</p>    
             </section>
         </article>
         <article id="list">
-            <ul>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-                <li>Hmmm?</li>
-            </ul>
+            <h2></h2>
+            <section> 
+                <div id="listWrap">
+                    <div>
+                        <span id="listTemplate">f</span> 
+                    </div>
+                </div>
+                <div id="listControls">
+                    <button id="prevBtn"><</button>
+                    <input id="listPage"/>
+                    <button id="nextBtn">></button>
+                </div>
+            </section>
         </article>
 
 
