--- a/Area/area.html
+++ b/Area/area.html
@@ -9,7 +9,7 @@
     <title>Riverwood</title>
 
  
-    <link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
+    <link href="../src/fonts.css" rel="stylesheet" type="text/css"/>
 	<link href="styles/index.css" rel="stylesheet" type="text/css">
     <link href="styles/header.css" rel="stylesheet" type="text/css">
     <link href="styles/introduction.css" rel="stylesheet" type="text/css">
@@ -186,7 +186,7 @@
 
 
 
-    <script src="scripts/JSF.js" type="text/javascript"></script> 
+    <script src="../src/JSF.js" type="text/javascript"></script> 
     <script src="scripts/header.js" type="text/javascript"></script> 
 
     <script src="scripts/onReady.js" type="text/javascript"></script>
