--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     
 
  
-    <script src="scripts/JSF.js" type="text/javascript"></script>
+    <script src="src/JSF.js" type="text/javascript"></script>
 
 
     <script src="scripts/header.js" type="text/javascript"></script>
