stage before downgrade for coursework ТЗ

--- a/Area/area.html
+++ b/Area/area.html
@@ -82,7 +82,7 @@
             </div> 
 
             <div class="header-other">
-                <button id="scrollBtn"><span></span></button>
+                <button id="backSign"><a href="/index.html"></a><span></span></button>
                 <button id="backBtn">
                     <a href="/index.html">
 
