--- a/About/about.html
+++ b/About/about.html
@@ -10,11 +10,11 @@
     <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
 
     
-    <link href="styles/fonts.css" rel="stylesheet" type="text/css"/>
-	<link href="styles/index.css" rel="stylesheet" type="text/css">
-    <link href="styles/header.css" rel="stylesheet" type="text/css">
-    <link href="styles/about.css" rel="stylesheet" type="text/css">
-    <link href="styles/media.css" rel="stylesheet" type="text/css">
+    <link href="/src/fonts.css" rel="stylesheet" type="text/css"/>
+	<link href="/About/styles/index.css" rel="stylesheet" type="text/css">
+    <link href="/About/styles/header.css" rel="stylesheet" type="text/css">
+    <link href="/About/styles/about.css" rel="stylesheet" type="text/css">
+    <link href="/About/styles/media.css" rel="stylesheet" type="text/css">
 
 
     <script async src="https://smtpjs.com/v3/smtp.js"></script>
@@ -99,8 +99,8 @@
     <script src="/src/JSF.js" type="text/javascript"></script>
 
 
-    <script src="scripts/header.js" type="text/javascript"></script>
-    <script defer src="scripts/onReady.js" type="text/javascript"></script>
+    <script src="/About/scripts/header.js" type="text/javascript"></script>
+    <script defer src="/About/scripts/onReady.js" type="text/javascript"></script>
     
 </body>
 
