--- a/Area/area.html
+++ b/Area/area.html
@@ -82,9 +82,9 @@
             </div> 
 
             <div class="header-other">
-                <button id="backSign"><a href="/index.html"></a><span></span></button>
+                <button id="backSign"><a href="/Index/index.html"></a><span></span></button>
                 <button id="backBtn">
-                    <a href="/index.html">
+                    <a href="/Index/index.html">
 
                     </a>
                     <span>
