--- a/River/river.html
+++ b/River/river.html
@@ -80,7 +80,7 @@
             </div> 
 
             <div class="header-other">
-                <button id="backSign"><a href="/Index/index.html"></a><span></span></button>
+                <button id="backSign"><a href="/index.html"></a><span></span></button>
                 <button id="backBtn">
                     <a href="/index.html"> </a>
                     <span>
