--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
 
     <script src="scripts/header.js" type="text/javascript"></script>
 
-    <script src="/scripts/d3/d3.min.js" ></script>
-    <script src='/scripts/d3/d3-geo.v1.min.js' ></script>
-    <script src="/scripts/d3/versor.js" ></script>
-    <script src="/scripts/d3/topojson.v2.min.js" ></script>
+    <script src="scripts/d3/d3.min.js" ></script>
+    <script src='scripts/d3/d3-geo.v1.min.js' ></script>
+    <script src="scripts/d3/versor.js" ></script>
+    <script src="scripts/d3/topojson.v2.min.js" ></script>
     <script src="scripts/earth.js" type="text/javascript"></script>
 
 
